[package]
name = "kvs"
version = "0.1.0"
author = "jakevin <jakevingoo@gmail.com>"
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.14"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
